--- a/package.json
+++ b/package.json
@@ -13,5 +13,8 @@
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
+  },
+  "dependencies": {
+    "dotenv": "^16.3.1"
   }
 }
