--- a/package.json
+++ b/package.json
@@ -10,11 +10,9 @@
   "author": "",
   "license": "ISC",
   "devDependencies": {
+    "dotenv": "^16.3.1",
     "prettier": "^2.8.8",
     "prettier-plugin-tailwindcss": "^0.3.0",
     "tailwindcss": "^3.3.2"
-  },
-  "dependencies": {
-    "dotenv": "^16.3.1"
   }
 }
